@@ -67,8 +67,7 @@ return (object)[
         '/class/registry.php',
         '/class/utilities.php',
         '/class/util.php',
-        //            '/include/constants.php',
-        //            '/include/functions.php',
+        '/preloads/index.php',
         '/ajaxrating.txt',
     ],
     'oldFolders'      => [
