@@ -26,7 +26,7 @@ $modversion    = [
     'name'                => _MI_TDMDOWNLOADS_NAME,
     'version'             => '2.1.0',
     'module_status'       => 'Beta 1',
-    'release_date'        => '2021/08/08',
+    'release_date'        => '2022/02/20',
     'description'         => _MI_TDMDOWNLOADS_DESC,
     'credits'             => 'Mage, Mamba, Goffy, Heyula',
     'author'              => 'Mage',
