@@ -1,4 +1,4 @@
-<h5>2.1.0 beta.2        [NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.25, PHP 8.12, PHP 8.1.0 Beta 5
+<h5>2.1.0 beta.2        [2022-02-20]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.27, PHP 8.0.16
 <hr>
 - PHP 8 Smarty defaults (mamba)
 - Fully qualified name replaced with import (mamba)
@@ -20,6 +20,7 @@
 - add credits for Goffy (mamba)
 - add xbootstrap templates to /extra (mamba)
 - changed styling for Categories in Preferences (mamba)
+- index.html in /preloads (mamba)
 
 
 <h5>2.01 Beta 1        [2021-08-08]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.22, PHP 8.08
